--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pixi/react": "^8.0.0",
+    "@pixi/webworker": "^7.4.3",
     "pixi.js": "^8.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
