--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pixi/webworker": "^7.4.3",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.9.0",
+    "rbush": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
