--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@observablehq/plot": "^0.6.17",
     "@pixi/react": "^8.0.0",
     "@pixi/webworker": "^7.4.3",
+    "d3": "^7.9.0",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.9.0",
     "rbush": "^4.0.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/d3": "^7.4.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
