--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pixi/react": "^8.0.0",
     "@pixi/webworker": "^7.4.3",
     "d3": "^7.9.0",
+    "normalize.css": "^8.0.1",
     "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.9.0",
     "rbush": "^4.0.1",
@@ -32,7 +33,8 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
