Updated project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cells-try",
+  "name": "cellvoyant-data-visualization-tool",
   "private": true,
   "version": "0.0.0",
   "type": "module",
